index: fix spacing on features in mobile

--- a/css/bootswatch.css
+++ b/css/bootswatch.css
@@ -142,6 +142,10 @@ body {
 	  margin-top: 20px;
 	}
 
+	.about p {
+		margin-bottom: 0;
+	}
+
 	.modal {
 		position: fixed !important;
 		top: 25% !important;
